# RetrievalLangchainPlugin

./: .gitignore  Dockerfile  README.md  docker_local_run.sh  example.env  pyproject.toml
app/: config.py  main.py
